--- a/Administracion.html
+++ b/Administracion.html
@@ -12,45 +12,8 @@
 
 <body>
   <!-- cabecera -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="inicio.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="registro.html">Registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ingreso.html">Ingreso</a>
-          </li>
-          <!--Ropita-->
-          <li class="nav-item">
-            <a class="nav-link" href="ropita.html">Ropita</a>
-          </li>
-          <!--Link para mis_datos-->
-          <li class="nav-item">
-            <a class="nav-link" href="mis_datos.html">Mis datos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="miscompras.html">Mis compras anteriores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="carrito.html">Mi carrito</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div id="navbar">
+  </div>
   <!--Administracion  -->
   <!-- Título -->
     <h1>&nbsp;Administración de usuario</h1>
@@ -74,14 +37,7 @@
     </ul>
   </div>
   <!-- pie de pagina -->
-  <br><br>
-  <hr>
-  <div>
-    &nbsp;&nbsp;Facebook
-    |
-    &nbsp;Whatsapp
-    |
-    &nbsp;Contacto +56 9 8979 3456
+  <div id="footer">
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
