--- a/bodega.html
+++ b/bodega.html
@@ -9,48 +9,14 @@
     <link rel="stylesheet" href="css/estilos_pag.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </head>
 <body class="loginn ingreso">
     <div class="container-fluid contenedor">
       <!-- cabecera -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="inicio.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ingreso.html">Ingreso</a>
-              </li>
-              <!--Ropita-->
-              <li class="nav-item">
-                <a class="nav-link" href="ropita.html">Ropita</a>
-              </li>
-              <!--Link para mis_datos-->
-            <li class="nav-item">
-              <a class="nav-link" href="mis_datos.html">Mis datos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="miscompras.html">Mis compras anteriores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="carrito.html">Mi carrito</a>
-            </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <div id="navbar">
+      </div>
   <h1>Mantenedor de Bodega</h1>
   <div class="form-group">
     <label for="categoria">Categoría:</label>
@@ -101,7 +67,7 @@
         <th>Opciones</th>
       </tr>
     </thead>
-    <tbody>
+    <body>
       <tr>
         <td>1</td>
         <td>Perro</td>
@@ -131,6 +97,8 @@
           <td><button class="btn btn-danger">Eliminar</button></td>
         </tr>
       </tr>
-    </tbody>
+    </body>
   </table>
+</div>
+<div id="footer">
 </div>
