--- a/boleta.html
+++ b/boleta.html
@@ -2,47 +2,19 @@
 <html lang="es">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boleta</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boleta</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-md navbar-green bg-green">
-        <img class="logo" src="img/icon.png" alt="">
-        <a class="navbar-brand" href="indexA.html">PetShop</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="ropita.html">¡Concurso!</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="misDatos.html">Mis datos</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="administracion.html">Administrar</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="cerrarSesion.html">Cerrar sesión</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div id="navbar">
+    </div>
     <div class="container">
         
         <div class="row">
@@ -126,22 +98,23 @@
     </div>
     <div class="progress">
         <div class="progress-bar bg-success" style="width: 33.33%">
-          <span class="d-block text-center text-white">Pedido confirmado</span>
+            <span class="d-block text-center text-white">Pedido confirmado</span>
         </div>
         <div class="progress-bar bg-warning" style="width: 33.33%">
-          <span class="d-block text-center">En proceso de despacho</span>
+            <span class="d-block text-center">En proceso de despacho</span>
         </div>
         <div class="progress-bar bg-danger" style="width: 33.33%">
-          <span class="d-block text-center text-white">Entrega pendiente</span>
+            <span class="d-block text-center text-white">Entrega pendiente</span>
         </div>
-      </div>
+        </div>
     </svg>
-    Facebook
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-  crossorigin="anonymous"></script>
+integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+crossorigin="anonymous"></script>
+    </div>
+    <div id="footer">
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
