--- a/carrito.html
+++ b/carrito.html
@@ -13,45 +13,8 @@
 <body>
 
   <!-- cabecera -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="inicio.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="registro.html">Registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ingreso.html">Ingreso</a>
-          </li>
-          <!--Ropita-->
-          <li class="nav-item">
-            <a class="nav-link" href="ropita.html">Ropita</a>
-          </li>
-          <!--Link para mis_datos-->
-          <li class="nav-item">
-            <a class="nav-link" href="mis_datos.html">Mis datos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="miscompras.html">Mis compras anteriores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="carrito.html">Mi carrito</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div id="navbar">
+  </div>
   <header id="header">
   </header>
   <!-- carrito -->
@@ -190,19 +153,8 @@
   <br><br><br>
 
   <!-- pie de pagina -->
-  <hr>
-  <br><br>
-  <div class="row">
-    <div class="col">
-      <div class="col face">
-        &nbsp;&nbsp;&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook"
-          viewBox="0 0 16 16">
-          <path
-            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
-        </svg>
-        Facebook
-      </div>
-    </div>
+  </div>
+  <div id="footer">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
