--- a/ingreso.html
+++ b/ingreso.html
@@ -6,62 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingresar</title>
     <!--Bootstrap-->
-    <link rel="stylesheet" href="css/estilos_pag.css">
+    <link rel="stylesheet" href="css/est_ingreso.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </head>
 <body class="loginn ingreso">
     <div class="container-fluid contenedor">
       <!-- cabecera -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="inicio.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ingreso.html">Ingreso</a>
-              </li>
-              <!--Ropita-->
-              <li class="nav-item">
-                <a class="nav-link" href="ropita.html">Ropita</a>
-              </li>
-              <!--Link para mis_datos-->
-            <li class="nav-item">
-              <a class="nav-link" href="mis_datos.html">Mis datos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="miscompras.html">Mis compras anteriores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="carrito.html">Mi carrito</a>
-            </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <div id="navbar">
+      </div>
         <!--INGRESO-->
     <div class = "login">
         <h1 class="text-center">Ingresar a la tienda</h1>
-        <form class="needs-validation was-validated" id="formulario_ing">
+        <form method="POST" id="formulario_ing" action="recibir_datos">
             <div class="form-group">
-                <label class="form-label" for="email">Correo: </label>
-                <input class="form-control" type="email" id="email">
+              <br>
+                <label for="email">Correo:</label>
+                <input 
+                  type="email"
+                  id ="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="Ingrese su email aquí..."                
+                />
             </div>
-            <div class="form-group was-validated">
-                <label class="form-label" for="contraseña">Contraseña:</label>
-                <input class="form-control" type="password" id="contraseña">
+            <div class="form-group">
+              <br>
+                <label for="contraseña">Contraseña:</label>
+                <input 
+                  class="form-control" 
+                  type="password" 
+                  id="password"
+                  name="password"
+                  placeholder="Ingrese su contraseña aquí..."
+                  />
             </div>
             <div class="form-group form-check">
                 <input class="form-check-input" type="checkbox" id="confirmar">
@@ -71,7 +49,7 @@
         </form>
         <div class="opciones">
           <a href="registro.html">Registrarme</a>
-           &nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="">Olvidé mi contraseña</a>
           </div>
     </div>
@@ -81,18 +59,13 @@
     <a href="Administracion.html">Haga click aquí para ingresar como Administrador</a>
     </div>
     <!-- pie de pagina -->
-    <br><br>
-    <hr class="sep">
-    <div class="row">
-        <div class="col face">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-        Facebook
-        </div>
+    <div id="footer">
     </div>
 </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-<script src="js/val_ingreso.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+<script src="js/val_ingreso.js" type="text/javascript"></script>
+<script src="js/script.js"></script>
 </html>
