--- a/mant_prod.html
+++ b/mant_prod.html
@@ -15,50 +15,35 @@
     <!--CONTENEDOR-->
     <div class="container-fluid">
         <!-- cabecera -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="inicio.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="registro.html">Registro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="ingreso.html">Ingreso</a>
-              </li>
-              <!--link para mis_datos-->
-              <li class="nav-item">
-                <a class="nav-link" href="mis_datos.html">Mis datos</a>
-              </li>
-            </ul>
-          </div>
+        <div id="navbar">
         </div>
-        </nav>
         <h1>Mantenedor de productos</h1>
         <br>
         <!--Primera fila-->
         <div class = "row">
             <!--Primera columna de la primera fila-->
             <div class="col-sm primero">
-                <form>
+                <form method="POST" id="mantenedor_prod" action="">
                     <!--Id-->
                     <div class="mb-3">
                         <label for="ID" class="form-label">ID:</label>
-                        <input type="text" class="form-control" id="IdProducto" aria-describedby="idHelp" placeholder="Ingrese un ID válido">
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            id="IdProducto"
+                            name="IdProducto" 
+                            aria-describedby="idHelp" 
+                            placeholder="Ingrese un ID válido"
+                            value=""
+                            />
                     </div>
                     <!--Selector-->
                     <div class="input-group mb-3">
                         <label class="input-group-text" for="SelectorCategoria">Categoría</label>
-                        <select class="form-select" id="SelectorCategoria">
+                        <select 
+                            name="SelectorCategoria" 
+                            class="form-select" 
+                            id="SelectorCategoria">
                             <option selected>Elija una categoría...</option>
                             <option value="1">Perros</option>
                             <option value="2">Gatos</option>
@@ -67,32 +52,64 @@
                     <!--Nombre-->
                     <div class="mb-3">
                         <label for="Nombre" class="form-label">Nombre:</label>
-                        <input type="text" class="form-control" id="Nombre" aria-describedby="NombreHelp" placeholder="Ingrese un nombre válido">
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            id="Nombre"
+                            name="Nombre" 
+                            aria-describedby="NombreHelp" 
+                            placeholder="Ingrese un nombre válido"
+                            value=""
+                            />
                     </div>
                     <!--Descripcion-->
                     <div class="form-group">
                         <label for="Descripcion">Descripción:</label>
-                        <textarea class="form-control "id="areaTexto" rows="3"></textarea>
+                        <textarea
+                            name="areaTexto" 
+                            class="form-control "
+                            id="areaTexto" 
+                            rows="3">
+                        </textarea>
                     </div>
                     <!--Precio-->
                     <div class="mb-3">
                         <label for="Precio" class="form-label">Precio:</label>
-                        <input type="text" class="form-control" id="Precio" aria-describedby="PrecioHelp" placeholder="Ingrese un Precio válido">
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            id="Precio"
+                            name="Precio" 
+                            aria-describedby="PrecioHelp" 
+                            placeholder="Ingrese un Precio válido">
                     </div>
                     <!--Descuentos-->
                     <div class="mb-3">
                         <label for="DescuentoSus" class="form-label">Descuento suscriptor:</label>
-                        <input type="text" class="form-control" id="DescuentoSus" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            id="DescuentoSus"
+                            name="DescuentoSus" 
+                            aria-describedby="DescuentoHelp" 
+                            placeholder="Ingrese porcentaje de descuento">
                     </div>
                     <!--Descuento por oferta-->
                     <div class="mb-3">
                         <label for="DescuentoOf" class="form-label">Descuento en oferta:</label>
-                        <input type="text" class="form-control" id="DescuentoOf" aria-describedby="DescuentoHelp" placeholder="Ingrese porcentaje de descuento">
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            id="DescuentoOf"
+                            name="DescuentoOf" 
+                            aria-describedby="DescuentoHelp" 
+                            placeholder="Ingrese porcentaje de descuento">
                     </div>
                     <!--Botones-->
                     <button type="button" class="btn btn-primary" id="btnNuevo">Nuevo</button>
                     <button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
                     <button type="button" class="btn btn-danger" id="btnEliminar">Eliminar</button>
+                    <button type="submit" class="btn btn-primary" id="btnEnviar">Confirmar</button>
                 </form>
             </div>
             <!--Segunda columna de la primera fila-->
@@ -162,19 +179,15 @@
     <br><br>
     <hr>
     <div class="row">
-        <div class="col">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-        Facebook
-        </div>    
-        
+        <div id="footer">
+        </div>
     </div>
 
 </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-<script src="js/val_mant_prod.js"></script>
-<script src="js/botones.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+<script src="js/botones.js" type="text/javascript"></script>
+<script src="js/script.js"></script>
 </html>
