--- a/mis_datos.html
+++ b/mis_datos.html
@@ -9,40 +9,8 @@
   </head>
   <body style="background-color:#F8F9F9">
       <!-- cabecera -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="inicio.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registro.html">Registro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ingreso.html">Ingreso</a>
-            </li>
-            <!--Link para mis_datos-->
-            <li class="nav-item">
-              <a class="nav-link" href="mis_datos.html">Mis datos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ropita.html">Ropita</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="miscompras.html">Mis compras anteriores</a>
-            </li>
-          </ul>
-        </div>
+      <div id="navbar">
       </div>
-      </nav>
 
       <!-- titulo -->
       <h1>
@@ -57,13 +25,13 @@
             <div class="col" id="datos">
               
               <div class="mb-3">
-                <label for="rut">RUT</label>
+                <label for="rut">Rut</label>
                 <input type="text" class="form-control" id="rut" aria-describedby="rutHelp" placeholder="ej;10123123-k">
                 <small id="rutHelp" class="form-text text-muted"></small>
               </div>
 
               <div class="mb-3">
-                <label for="nombre">NOMBRES</label>
+                <label for="nombre">Nombres</label>
                 <input type="text" class="form-control" id="nombres" placeholder="Ingresa tus nombres">
               </div>
 
@@ -97,37 +65,39 @@
                 <input type="password" class="form-control" id="Contraseña2" placeholder="Vuelva ingresar la Password">
               </div>
 
-            </div>
-            <div class="col" id="foto">
-              foto del cliente
-            </div>
-
           </div>
-          <div class="row">
-            <div class="col text-center">
-              <button type="submit" class="btn btn-primary ancho-boton">Guardar</button>
-              <button type="reset" class="btn btn-primary ancho-boton">Limpiar</button>
-              <div class="form-group">
-                <label for="exampleFormControlFile1">Ingrese su foto o imagen</label>
-                <input type="file" class="form-control-file" id="exampleFormControlFile1">
+          <div class="col-md-6">
+            <div class="text-center">
+              <label for="foto" class="form-label">Ingrese una foto para su perfil</label>
+            </div>
+            <div class="row mt-3">
+              <div class="col text-center">
+                <div class="d-flex justify-content-center align-items-center" id="foto">
+                  <img src="https://via.placeholder.com/150" alt="Foto de perfil" class="rounded-circle">
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
+            <div class="mb-3">
+              <div class="col text-center">
+                <div class="form-group">
+                  <label for="exampleFormControlFile1">Ingrese su foto o imagen</label>
+                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                  </div>
+                  <div>
+                  </div>
+                  <div>
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col text-center">
+                      <button type="submit" class="btn btn-primary ancho-boton">Guardar</button>
+                      <button type="reset" class="btn btn-primary ancho-boton">Limpiar</button>
+                    </div>
       </form>
-
-      <!-- pie de pagina -->
-    <br><br>
-    <hr class="sep">
-    <div class="row">
-        <div class="col face">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-        Facebook
-        </div>
-    </div>
+      <div id="footer">
+      </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
