--- a/registro.html
+++ b/registro.html
@@ -4,84 +4,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PetShop</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/est_mant.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body style="background-color:#F8F9F9">
       <!-- cabecera -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid contenedor">
-        <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="inicio.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="registro.html">Registro</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ingreso.html">Ingreso</a>
-            </li>
-            <!--link para mis_datos-->
-            <li class="nav-item">
-              <a class="nav-link" href="mis_datos.html">Mis datos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="ropita.html">Ropita</a>
-            </li>
-          </ul>
-        </div>
+      <div id="navbar">
       </div>
-      </nav>
       <!-- titulo -->
       <h1>
         Registro
       </h1>
       <br>
       <!-- todos los datos de cliente-->
-      <form action="">
+      <form id="myForm" action="">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6">
               <div class="mb-3">
                 <label for="rut" class="form-label">RUT</label>
-                <input type="text" class="form-control" id="rut" aria-describedby="rutHelp" placeholder="Ejemplo: 10123123-K">
-                <small id="rutHelp" class="form-text text-muted">Escriba el RUT sin puntos y con guión.</small>
+                <input type="text" class="form-control" id="rut" name="rut" aria-describedby="rutHelp" placeholder="Ejemplo: 10123123-K">
               </div>
               <div class="mb-3">
                 <label for="nombres" class="form-label">NOMBRES</label>
-                <input type="text" class="form-control" id="nombres" placeholder="Ingrese sus nombres">
+                <input type="text" class="form-control" id="nombres" name="nombres" placeholder="Ingrese sus nombres">
               </div>
               <div class="mb-3">
                 <label for="apellidos" class="form-label">APELLIDOS</label>
-                <input type="text" class="form-control" id="apellidos" placeholder="Ingrese sus apellidos">
+                <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="Ingrese sus apellidos">
               </div>
               <div class="mb-3">
                 <label for="correo" class="form-label">CORREO ELECTRÓNICO</label>
-                <input type="email" class="form-control" id="correo" placeholder="Ingrese su correo electrónico">
+                <input type="email" class="form-control" id="correo" name="correo" placeholder="Ingrese su correo electrónico">
               </div>
               <div class="mb-3">
                 <label for="direccion" class="form-label">DIRECCIÓN</label>
-                <textarea class="form-control" id="direccion" rows="3" placeholder="Ingrese su dirección"></textarea>
+                <textarea class="form-control" id="direccion" name="direccion" rows="3" placeholder="Ingrese su dirección"></textarea>
               </div>
               <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="aporte">
+                <input type="checkbox" class="form-check-input" id="aporte" name="aporte">
                 <label class="form-check-label" for="aporte">Deseo inscribirme con un aporte.</label>
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">CONTRASEÑA</label>
-                <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña">
               </div>
               <div class="mb-3">
                 <label for="confirm-password" class="form-label">CONFIRMAR CONTRASEÑA</label>
-                <input type="password" class="form-control" id="confirm-password" placeholder="Ingrese su contraseña nuevamente">
+                <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Ingrese su contraseña nuevamente">
               </div>
             </div>
             <div class="col-md-6">
@@ -110,20 +80,17 @@
               </div>
               </div>
             </div>
-      </form>
-      <!-- pie de pagina -->
-    <br><br>
-    <hr class="sep">
-    <div class="row">
-        <div class="col face">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-        Facebook
+          </div>
         </div>
-    </div>
+      </form>
+      
+      <!-- pie de pagina -->
+      <div id="footer">
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
   <script src="js/val_registro.js"></script>
+  <script src="js/script.js"></script>
   </body>
 </html>
