--- a/usuario.html
+++ b/usuario.html
@@ -1,127 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantenedor de Usuarios</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
 </head>
+
 <body>
     <!--CONTENEDOR-->
     <div class="container-fluid">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="inicio.html"><img class="logo" src="img/logovet2.png" alt=""></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="inicio.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="registro.html">Registrarme</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="ingreso.html">Iniciar sesión</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="carrito.html">Mi carrito</a>
-                    </li>
-                    <li class ="nav-item">
-                    <a class="nav-link active" aria-current="page" href="miscompras.html">Mis compras anteriores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="mant_prod.html">Administrar productos</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-                </div>
-            
-            </div>
-        </nav>
+        <div id="navbar">
+        </div>
         <h1>Mantenedor de Usuarios</h1>
         <br>
         <div class="row">
             <div class="col-sm">
-                <form>
+                <form id="form" action="">
                     <!--Id-->
                     <div class="mb-3">
                         <label for="ID" class="form-label">ID:</label>
-                        <input type="text" class="form-control" id="IdProducto" aria-describedby="idHelp" placeholder="Ingrese un ID válido">
+                        <input type="text" class="form-control" id="IdProducto" aria-describedby="idHelp"
+                            placeholder="Ingrese un ID válido">
                     </div>
                     <!--Tipo de usuario-->
                     <label for="TipoUser" class="form-label">Tipo de usuario:</label> &nbsp;
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="opcion1">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                            value="opcion1">
                         <label class="form-check-label" for="RadiOption1">Cliente</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="opcion2">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                            value="opcion2">
                         <label class="form-check-label" for="RadiOption2">Administrador</label>
                     </div>
                     <!--Rut-->
                     <div class="mb-3">
                         <label for="Rut" class="form-label">RUT:</label>
-                        <input type="text" class="form-control" id="Rut" aria-describedby="RutHelp" placeholder="Ingrese un Rut válido">
+                        <input type="text" class="form-control" id="Rut" aria-describedby="RutHelp"
+                            placeholder="Ingrese un Rut válido">
                     </div>
                     <!--Nombre-->
                     <div class="mb-3">
                         <label for="Nombres" class="form-label">Nombres:</label>
-                        <input type="text" class="form-control" id="Nombre" aria-describedby="NombreHelp" placeholder="Ingrese un nombre válido">
+                        <input type="text" class="form-control" id="Nombre" aria-describedby="NombreHelp"
+                            placeholder="Ingrese un nombre válido">
                     </div>
                     <!--Apellidos-->
                     <div class="mb-3">
                         <label for="Apellidos" class="form-label">Apellidos:</label>
-                        <input type="text" class="form-control" id="Nombre" aria-describedby="ApellidoHelp" placeholder="Ingrese un nombre válido">
+                        <input type="text" class="form-control" id="Apellido" aria-describedby="ApellidoHelp"
+                            placeholder="Ingrese un Apellido válido">
+
                     </div>
                     <!--Descripcion-->
                     <div class="form-group">
                         <label for="Descripcion">Dirección:</label>
-                        <textarea class="form-control "id="areaTexto" rows="3"></textarea>
+                        <textarea class="form-control" id="areaTexto" rows="3"></textarea>
                     </div>
                     <!--Correo-->
                     <div class="form-group">
-                        <label class="form-label" for="email">Correo: </label>
-                        <input class="form-control" type="email" id="email" required>
+                        <label class="form-label" for="email">Correo:</label>
+                        <input class="form-control" type="email" id="email">
                         <div class="invalid-feedback">Por favor ingrese su correo.</div>
                     </div>
                     <!--Contraseña-->
-                    <div class="form-group was-validated">
+                    <div class="form-group">
                         <label class="form-label" for="password">Contraseña:</label>
-                        <input class="form-control" type="password" id="password" required>
+                        <input class="form-control" type="password" id="password">
                         <div class="invalid-feedback">Por favor ingrese su contraseña.</div>
                         <button type="submit" class="btn btn-success">Guardar contraseña</button>
-                    </div>                                        
+                    </div>
                     <!--Checkbox-->
                     <div class="form-group form-check">
                         <input class="form-check-input" type="checkbox" id="check">
-                        <label  class="form-check-label"for="check">Deseo subscribirme al Buzón de noticias</label>
+                        <label class="form-check-label" for="check">Deseo subscribirme al Buzón de noticias</label>
                     </div>
                     <!--Botones-->
-                    <button type="submit" class="btn btn-primary">Nuevo</button>
-                    <button type="submit" class="btn btn-success">Guardar</button>
-                    <button type="submit" class="btn btn-danger">Eliminar</button>
-                </form>
+                    <button type="button" onclick="enviarForm()" class="btn btn-primary">Nuevo</button>
+                    <input type="submit" class="btn btn-success" value="Guardar" />
+                    <button type="reset" class="btn btn-danger">Eliminar</button>
+
             </div>
             <div class="col-sm">
                 <h5>Imagen de Usuario:</h5>
                 <label class="form-label" for="imagenProd">Seleccione un archivo:</label>
                 <input type="file" class="form-control" id="imgSelec">
             </div>
+            </form>
+
         </div>
         <div class="row">
             <div class="col-md">
@@ -176,18 +154,14 @@
                     </tbody>
                 </table>
                 <!-- pie de pagina -->
-    <br><br>
-    <hr class="sep">
-    <div class="row">
-        <div class="col face">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-        Facebook
-        </div>
+                <div id="footer">
+                </div>
             </div>
-        </div>
+            <script src="https://code.jquery.com/jquery-3.6.4.js"
+                integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+            <script src="js/val_usuario.js"></script>
+            <script src="js/script.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-<script src="js/man_usuarios.js"></script>
+
 </html>
